feat: Update MothersDayCard component with personalized title and message

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,8 +15,8 @@ import "../styles/global.css";
   <body class="relative min-h-screen flex flex-col items-center justify-between">
     <MothersDayCard 
       client:load
-      title="Happy Mother’s Day!"
-      message="Thank you for all your love, care, and support over the years. You helped me grow into the man I am today. I love you so much and I am forever grateful for everything you do. I hope you have a wonderful day filled with love and joy!"
+      title="Happy Mother’s Day Jean!"
+      message="Thank you for all your love, care, and support over the years. You helped me grow into the man I am today."
       sender="With Love, Luke ❤️"
     />
 
